2012-09-17  Zan Dobersek  <zandobersek@gmail.com>

        [GTK] fast/loader/display-image-unset-can-block-image-and-can-reload-in-place.html failing after r128645
        https://bugs.webkit.org/show_bug.cgi?id=96899

        Reviewed by Martin Robinson.

        When overriding the 'WebKitDisplayImageKey' preference, use the
        'auto-load-images' property of WebKitWebSettings as the property which
        should be updated with the corresponding preference value.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):
        * DumpRenderTree/gtk/TestRunnerGtk.cpp:
        (TestRunner::overridePreference):

2012-09-17  Pratik Solanki  <psolanki@apple.com>

        DumpRenderTree and WebKitTestRunner should compile with -Wundef on Mac
        https://bugs.webkit.org/show_bug.cgi?id=96973

        Reviewed by Dan Bernstein.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:
        * WebKitTestRunner/PlatformWebView.h: Use #ifdef __OBJC__ and not #if.

2012-09-17  Dirk Pranke  <dpranke@chromium.org>

        nrwt: remove "unexpected EOF" warnings
        https://bugs.webkit.org/show_bug.cgi?id=96970

        Reviewed by Ojan Vafai.

        After debugging this a bit, it looks like there aren't any cases
        that I can reproduce where a read() of zero indicates something
        actually wrong; either it is a prelude to a crash, or a false
        negative. So, I'm removing these warnings and adding a comment.

        * Scripts/webkitpy/layout_tests/port/server_process.py:
        (ServerProcess._wait_for_data_and_update_buffers_using_select):

2012-09-17  Dirk Pranke  <dpranke@chromium.org>

        [chromium] ASAN bot is crashing at the end of the run
        https://bugs.webkit.org/show_bug.cgi?id=96967

        Reviewed by Abhishek Arya.

        The ASAN bot is crashing attempting to decode some output into